Changelog
=========

2.0.1 (unreleased)
------------------

- Nothing changed yet.


2.0.0 (2016-12-22)
------------------

- Do not support python 2.6 anymore
  [gforcada]

- Remove unittest2 references
  [gforcada]

1.7.0 (2015-07-23)
------------------

- Add support for Robot Framework 2.9
  [datakurre]

1.6.1 (2014-10-01)
------------------

- Add ROBOTSUITE_LOGLEVEL environment variable for filtering text execution
  errors during log merge
  [datakurre]

1.6.0 (2014-06-29)
------------------

- Add support for ROBOTSUITE_PREFIX-env for injecting custom string into all
  robotsuite test names
  [datakurre]
- Add UTF-8 support for robot variables [#6]
  [Tom Gross]
  [Vincent Fretin]
- Added Python 3.4 support
  [Vincent Fretin]


1.5.0 (2014-04-13)
------------------

- Restore original behavior to override the exiting robot_output.xml. Set
  environment variable ROBOTSUITE_APPEND_OUTPUT_XML=1 to append test results to
  the existing robot_output.xml.
  [datakurre]

1.4.3 (2014-01-27)
------------------

- Fix issue where test suites with sub-suites were not supported
  [datakurre]

1.4.2 (2013-11-22)
------------------

- Fix issue where suite setups were run for suites without tests
  wit robotframework >= 2.8.0
  [datakurre]

1.4.1 (2013-10-13)
------------------

- Fix regression in 1.4.0, which dropped relative path names from robot test
  cases
  [datakurre]
- Fix RobotTestCase to mimic DocTestCase enough to allow plone.testing to set
  'layer' for it
  [datakurre]
- Fix to set given test 'setUp' and 'tearDown' methods properly as
  instancemethods (will break existing methods not accepting 'self' parameters)
  [datakurre]

1.4.0 (2013-06-19)
------------------

- Supports only roboframework >= 2.8.
  Use robotsuite 1.3.x with robotframework 1.7.x
  [datakurre]

1.3.3 (2013-06-05)
------------------

- Fix to support custom screenshot filenames with paths [fix #2]
  [datakurre]

1.3.2 (2013-06-03)
------------------
